.gitignore is now working

--- a/pubsub_libdbus/pubsub_libdbus.cbp
+++ b/pubsub_libdbus/pubsub_libdbus.cbp
@@ -2,39 +2,19 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6"/>
 	<Project>
-		<Option title="dbustest"/>
+		<Option title="pubsub_libdbus"/>
 		<Option makefile_is_custom="1"/>
 		<Option compiler="gcc"/>
 		<Option virtualFolders="CMake Files\;CMake Files\pubsub_libdbus\;"/>
 		<Build>
 			<Target title="all">
-				<Option working_dir="/home/kaushal/CLionProjects/dbustest"/>
+				<Option working_dir="/home/kaushal/CLionProjects/dbustest/pubsub_libdbus"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 all"/>
-					<CompileFile command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="rebuild_cache">
-				<Option working_dir="/home/kaushal/CLionProjects/dbustest"/>
-				<Option type="4"/>
-				<MakeCommands>
-					<Build command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
-					<CompileFile command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="edit_cache">
-				<Option working_dir="/home/kaushal/CLionProjects/dbustest"/>
-				<Option type="4"/>
-				<MakeCommands>
-					<Build command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 edit_cache"/>
-					<CompileFile command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/pubsub_libdbus/Makefile&quot;  VERBOSE=1 all"/>
+					<CompileFile command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/pubsub_libdbus/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/pubsub_libdbus/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/gmake -f &quot;/home/kaushal/CLionProjects/dbustest/pubsub_libdbus/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="subscriber">
